--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "client/cores-anywhere"]
-	path = client/cores-anywhere
-	url = https://github.com/Rob--W/cors-anywhere.git
+[submodule "cors-anywhere"]
+	path = cors-anywhere
+	url = https://github.com/Rob--W/cors-anywhere/
